--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ idna==3.2
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
+psycopg2==2.9.1
+psycopg2-binary==2.9.1
 SQLAlchemy==1.4.19
 visitor==0.1.3
 Werkzeug==2.0.1
