too tired for this

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL = ''
-SECRET_KEY =
+DATABASE_URL = 'sqlite:///../my_flask/user_database.db'
+SECRET_KEY = 'asfadw22asd321sfqweqewads12farfwfasdvawrbwdfa12eqsdf'
