--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,8 @@ gunicorn==20.1.0
 idna==3.2
 itsdangerous==2.0.1
 Jinja2==3.0.1
+jsonify==0.5
+jyserver==0.0.5
 MarkupSafe==2.0.1
 psycopg2==2.9.1
 psycopg2-binary==2.9.1
@@ -24,3 +26,4 @@ SQLAlchemy==1.4.19
 visitor==0.1.3
 Werkzeug==2.0.1
 WTForms==2.3.3
+xlrd==2.0.1
